--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.fira-code-font {
+    font-family: "Fira Code", monospace;
+    font-optical-sizing: auto;
+    font-weight: 500;
+font-style: normal;
+}
+
+.border-animation-pink {
+    background-image: 
+        linear-gradient(90deg, #b25265 50%, transparent 50%),
+        linear-gradient(90deg, #b25266 50%, transparent 50%),
+        linear-gradient(0deg, #b25266 50%, transparent 50%),
+        linear-gradient(0deg, #b25266 50%, transparent 50%);
+    background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
+    background-size: 15px 2px, 15px 2px, 2px 15px, 2px 15px;
+    background-position: left top, right bottom, left bottom, right top;
+    animation: border-dance 0.1s infinite linear;
+}
+    
+@keyframes border-dance {
+    0% { background-position: left top, right bottom, left bottom, right top; }
+    100% { background-position: left 15px top, right 15px bottom, left bottom 15px, right top 15px; }
+}
+
+.fade-bottom {
+    --mask: linear-gradient(to bottom, 
+        rgba(0,0,0, 1) 0,   rgba(0,0,0, 1) 15%, 
+        rgba(0,0,0, 0) 90%, rgba(0,0,0, 0) 0
+    ) 100% 50% / 100% 100% repeat-x;
+
+    -webkit-mask: var(--mask); 
+    mask: var(--mask);
+}
