--- a/docs/index.css
+++ b/docs/index.css
@@ -576,6 +576,28 @@ video {
   text-decoration-color: #df3e23;
 }
 
+.link-blue {
+  text-decoration-line: underline;
+  text-decoration-color: #249fde;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 3px;
+}
+
+.link-blue:hover {
+  text-decoration-color: #20d6c7;
+}
+
+.link-blue-2 {
+  text-decoration-line: underline;
+  text-decoration-color: #249fde;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 3px;
+}
+
+.link-blue-2:hover {
+  text-decoration-color: #20d6c7;
+}
+
 .pointer-events-none {
   pointer-events: none;
 }
@@ -600,8 +622,8 @@ video {
   bottom: 4rem;
 }
 
-.bottom-\[25vh\] {
-  bottom: 25vh;
+.bottom-\[20vh\] {
+  bottom: 20vh;
 }
 
 .right-0 {
@@ -642,10 +664,6 @@ video {
 
 .mb-4 {
   margin-bottom: 1rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
 }
 
 .ml-8 {
@@ -692,16 +710,20 @@ video {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .h-0 {
   height: 0px;
 }
 
-.h-4 {
-  height: 1rem;
+.h-16 {
+  height: 4rem;
 }
 
-.h-\[10000px\] {
-  height: 10000px;
+.h-4 {
+  height: 1rem;
 }
 
 .h-\[85vh\] {
@@ -736,12 +758,16 @@ video {
   width: 0px;
 }
 
-.w-1 {
-  width: 0.25rem;
+.w-0\.5 {
+  width: 0.125rem;
 }
 
 .w-1\/3 {
   width: 33.333333%;
+}
+
+.w-5\/6 {
+  width: 83.333333%;
 }
 
 .w-\[24px\] {
@@ -768,16 +794,12 @@ video {
   max-width: 1920px;
 }
 
+.shrink-0 {
+  flex-shrink: 0;
+}
+
 .flex-grow {
   flex-grow: 1;
-}
-
-.flex-grow-\[0\.25\] {
-  flex-grow: 0.25;
-}
-
-.flex-grow-\[0\.75\] {
-  flex-grow: 0.75;
 }
 
 .origin-bottom {
@@ -811,6 +833,24 @@ video {
 .translate-y-\[0\.075em\] {
   --tw-translate-y: 0.075em;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+
+.grid-flow-row-dense {
+  grid-auto-flow: row dense;
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -857,6 +897,10 @@ video {
   overflow-x: clip;
 }
 
+.text-nowrap {
+  text-wrap: nowrap;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -895,6 +939,22 @@ video {
      object-fit: cover;
 }
 
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
 .pt-8 {
   padding-top: 2rem;
 }
@@ -907,9 +967,18 @@ video {
   text-align: right;
 }
 
+.align-text-bottom {
+  vertical-align: text-bottom;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-6xl {
@@ -917,14 +986,9 @@ video {
   line-height: 1;
 }
 
-.text-7xl {
-  font-size: 4.5rem;
+.text-8xl {
+  font-size: 6rem;
   line-height: 1;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .text-xl {
@@ -935,6 +999,18 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.leading-normal {
+  line-height: 1.5;
 }
 
 .leading-relaxed {
@@ -963,6 +1039,10 @@ video {
   text-decoration-line: underline;
 }
 
+.decoration-blue-light {
+  text-decoration-color: #249fde;
+}
+
 .decoration-red-light {
   text-decoration-color: #b4202a;
 }
@@ -977,6 +1057,10 @@ video {
 
 .underline-offset-\[3px\] {
   text-underline-offset: 3px;
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .backdrop-blur-md {
@@ -1083,6 +1167,10 @@ video {
   mask: var(--soft-mask-vertical), var(--soft-mask-horizontal);
 }
 
+.hover\:decoration-blue-bright:hover {
+  text-decoration-color: #20d6c7;
+}
+
 .hover\:decoration-red-bright:hover {
   text-decoration-color: #df3e23;
 }
@@ -1092,12 +1180,16 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.peer:hover ~ .peer-hover\:translate-y-12 {
-  --tw-translate-y: 3rem;
+.peer:hover ~ .peer-hover\:translate-y-11 {
+  --tw-translate-y: 2.75rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .peer:hover ~ .peer-hover\:translate-y-8 {
   --tw-translate-y: 2rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.peer:hover ~ .peer-hover\:opacity-100 {
+  opacity: 1;
 }
