--- a/docs/index.css
+++ b/docs/index.css
@@ -602,14 +602,6 @@ video {
   pointer-events: none;
 }
 
-.static {
-  position: static;
-}
-
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -650,10 +642,6 @@ video {
   top: 500px;
 }
 
-.left-0 {
-  left: 0px;
-}
-
 .-z-10 {
   z-index: -10;
 }
@@ -670,12 +658,12 @@ video {
   z-index: 50;
 }
 
-.float-right {
-  float: right;
-}
-
 .m-4 {
   margin: 1rem;
+}
+
+.m-8 {
+  margin: 2rem;
 }
 
 .-mt-16 {
@@ -726,6 +714,18 @@ video {
   margin-top: 48rem;
 }
 
+.ml-\[\] {
+  margin-left: ;
+}
+
+.ml-\[12\.5\] {
+  margin-left: 12.5;
+}
+
+.ml-\[12\.5\%\] {
+  margin-left: 12.5%;
+}
+
 .flex {
   display: flex;
 }
@@ -770,6 +770,10 @@ video {
   height: 100vh;
 }
 
+.max-h-\[720px\] {
+  max-height: 720px;
+}
+
 .min-h-full {
   min-height: 100%;
 }
@@ -794,28 +798,44 @@ video {
   width: 24px;
 }
 
-.w-\[90\%\] {
-  width: 90%;
+.w-\[85\%\] {
+  width: 85%;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-\[75\%\] {
-  width: 75%;
+.w-10 {
+  width: 2.5rem;
 }
 
-.w-\[85\%\] {
-  width: 85%;
+.w-\[10\%\] {
+  width: 10%;
 }
 
-.w-screen {
-  width: 100vw;
+.w-\[25\%\] {
+  width: 25%;
 }
 
-.w-\[200vw\] {
-  width: 200vw;
+.w-\[15\%\] {
+  width: 15%;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-\[87\.5\%\] {
+  width: 87.5%;
+}
+
+.w-1 {
+  width: 0.25rem;
 }
 
 .min-w-\[1248px\] {
@@ -826,8 +846,32 @@ video {
   min-width: 100%;
 }
 
+.max-w-0 {
+  max-width: 0px;
+}
+
+.max-w-\[100px\] {
+  max-width: 100px;
+}
+
 .max-w-\[1920px\] {
   max-width: 1920px;
+}
+
+.max-w-\[25\%\] {
+  max-width: 25%;
+}
+
+.max-w-\[15\%\] {
+  max-width: 15%;
+}
+
+.max-w-\[5\%\] {
+  max-width: 5%;
+}
+
+.max-w-\[20\%\] {
+  max-width: 20%;
 }
 
 .shrink-0 {
@@ -875,33 +919,18 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-\[50vw\] {
-  --tw-translate-x: -50vw;
+.translate-x-40 {
+  --tw-translate-x: 10rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-@keyframes pulse {
-  50% {
-    opacity: .5;
-  }
+.-translate-x-8 {
+  --tw-translate-x: -2rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.animate-pulse {
-  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-}
-
-@keyframes pulse-slow {
-  0%, 100% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0.85;
-  }
-}
-
-.animate-pulse-main {
-  animation: pulse-slow 10s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -914,12 +943,24 @@ video {
           user-select: none;
 }
 
+.resize {
+  resize: both;
+}
+
+.grid-flow-col {
+  grid-auto-flow: column;
+}
+
 .grid-flow-row-dense {
   grid-auto-flow: row dense;
 }
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -958,24 +999,46 @@ video {
   gap: 2rem;
 }
 
-.gap-0 {
-  gap: 0px;
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-x-16 {
+  -moz-column-gap: 4rem;
+       column-gap: 4rem;
+}
+
+.gap-x-8 {
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+
+.gap-y-4 {
+  row-gap: 1rem;
+}
+
+.gap-y-2 {
+  row-gap: 0.5rem;
 }
 
 .overflow-clip {
   overflow: clip;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .overflow-x-clip {
   overflow-x: clip;
 }
 
-.text-nowrap {
-  text-wrap: nowrap;
+.overflow-x-visible {
+  overflow-x: visible;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
+.text-nowrap {
+  text-wrap: nowrap;
 }
 
 .rounded-sm {
@@ -996,6 +1059,11 @@ video {
   background-color: rgb(20 52 100 / var(--tw-bg-opacity));
 }
 
+.bg-off-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(218 224 234 / var(--tw-bg-opacity));
+}
+
 .bg-purple-main {
   --tw-bg-opacity: 1;
   background-color: rgb(121 58 128 / var(--tw-bg-opacity));
@@ -1004,16 +1072,6 @@ video {
 .bg-red-main {
   --tw-bg-opacity: 1;
   background-color: rgb(115 23 45 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-off-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(218 224 234 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -1045,6 +1103,14 @@ video {
   padding-top: 2rem;
 }
 
+.pr-0 {
+  padding-right: 0px;
+}
+
+.pl-0 {
+  padding-left: 0px;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1057,14 +1123,9 @@ video {
   vertical-align: text-bottom;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-6xl {
@@ -1072,9 +1133,9 @@ video {
   line-height: 1;
 }
 
-.text-8xl {
-  font-size: 6rem;
-  line-height: 1;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-xl {
@@ -1087,27 +1148,8 @@ video {
   line-height: 1rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .font-semibold {
   font-weight: 600;
-}
-
-.font-bold {
-  font-weight: 700;
 }
 
 .italic {
@@ -1120,6 +1162,22 @@ video {
 
 .leading-relaxed {
   line-height: 1.625;
+}
+
+.leading-3 {
+  line-height: .75rem;
+}
+
+.leading-snug {
+  line-height: 1.375;
+}
+
+.leading-tight {
+  line-height: 1.25;
+}
+
+.leading-none {
+  line-height: 1;
 }
 
 .tracking-\[0\.15em\] {
@@ -1168,6 +1226,12 @@ video {
   opacity: 0;
 }
 
+.backdrop-blur-\[2px\] {
+  --tw-backdrop-blur: blur(2px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
 .backdrop-blur-md {
   --tw-backdrop-blur: blur(12px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -1180,16 +1244,10 @@ video {
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-.backdrop-blur-\[2px\] {
-  --tw-backdrop-blur: blur(2px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.backdrop-blur-\[1px\] {
-  --tw-backdrop-blur: blur(1px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .transition-transform {
@@ -1202,6 +1260,10 @@ video {
   transition-delay: 150ms;
 }
 
+.duration-200 {
+  transition-duration: 200ms;
+}
+
 .duration-\[350ms\] {
   transition-duration: 350ms;
 }
@@ -1210,8 +1272,24 @@ video {
   transition-duration: 400ms;
 }
 
-.duration-200 {
-  transition-duration: 200ms;
+.duration-\[5000ms\] {
+  transition-duration: 5000ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
 }
 
 .ease-in-out {
@@ -1288,8 +1366,8 @@ video {
   mask: var(--soft-mask-vertical), var(--soft-mask-horizontal);
 }
 
-.hover\:translate-x-4:hover {
-  --tw-translate-x: 1rem;
+.hover\:-translate-x-2:hover {
+  --tw-translate-x: -0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
