--- a/docs/index.css
+++ b/docs/index.css
@@ -658,14 +658,6 @@ video {
   z-index: 50;
 }
 
-.m-4 {
-  margin: 1rem;
-}
-
-.m-8 {
-  margin: 2rem;
-}
-
 .-mt-16 {
   margin-top: -4rem;
 }
@@ -714,16 +706,8 @@ video {
   margin-top: 48rem;
 }
 
-.ml-\[\] {
-  margin-left: ;
-}
-
-.ml-\[12\.5\] {
-  margin-left: 12.5;
-}
-
-.ml-\[12\.5\%\] {
-  margin-left: 12.5%;
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -770,10 +754,6 @@ video {
   height: 100vh;
 }
 
-.max-h-\[720px\] {
-  max-height: 720px;
-}
-
 .min-h-full {
   min-height: 100%;
 }
@@ -786,6 +766,10 @@ video {
   width: 0.125rem;
 }
 
+.w-1 {
+  width: 0.25rem;
+}
+
 .w-1\/3 {
   width: 33.333333%;
 }
@@ -794,48 +778,16 @@ video {
   width: 83.333333%;
 }
 
+.w-8 {
+  width: 2rem;
+}
+
 .w-\[24px\] {
   width: 24px;
 }
 
-.w-\[85\%\] {
-  width: 85%;
-}
-
 .w-full {
   width: 100%;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-\[10\%\] {
-  width: 10%;
-}
-
-.w-\[25\%\] {
-  width: 25%;
-}
-
-.w-\[15\%\] {
-  width: 15%;
-}
-
-.w-\[100\%\] {
-  width: 100%;
-}
-
-.w-\[50\%\] {
-  width: 50%;
-}
-
-.w-\[87\.5\%\] {
-  width: 87.5%;
-}
-
-.w-1 {
-  width: 0.25rem;
 }
 
 .min-w-\[1248px\] {
@@ -844,34 +796,6 @@ video {
 
 .min-w-full {
   min-width: 100%;
-}
-
-.max-w-0 {
-  max-width: 0px;
-}
-
-.max-w-\[100px\] {
-  max-width: 100px;
-}
-
-.max-w-\[1920px\] {
-  max-width: 1920px;
-}
-
-.max-w-\[25\%\] {
-  max-width: 25%;
-}
-
-.max-w-\[15\%\] {
-  max-width: 15%;
-}
-
-.max-w-\[5\%\] {
-  max-width: 5%;
-}
-
-.max-w-\[20\%\] {
-  max-width: 20%;
 }
 
 .shrink-0 {
@@ -890,8 +814,9 @@ video {
   transform-origin: top;
 }
 
-.origin-right {
-  transform-origin: right;
+.-translate-x-64 {
+  --tw-translate-x: -16rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-y-8 {
@@ -909,6 +834,11 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-x-4 {
+  --tw-translate-x: 1rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .translate-y-4 {
   --tw-translate-y: 1rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -919,18 +849,30 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-40 {
-  --tw-translate-x: 10rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-8 {
-  --tw-translate-x: -2rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes appear {
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+
+.animate-appear {
+  animation: appear 300ms cubic-bezier(0.4, 0, 0.6, 1) forwards;
+}
+
+@keyframes appear {
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+
+.animate-appear-delay {
+  animation: appear 300ms 150ms cubic-bezier(0.4, 0, 0.6, 1) forwards;
 }
 
 .cursor-pointer {
@@ -943,20 +885,8 @@ video {
           user-select: none;
 }
 
-.resize {
-  resize: both;
-}
-
 .grid-flow-col {
   grid-auto-flow: column;
-}
-
-.grid-flow-row-dense {
-  grid-auto-flow: row dense;
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-rows-2 {
@@ -999,24 +929,6 @@ video {
   gap: 2rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-x-16 {
-  -moz-column-gap: 4rem;
-       column-gap: 4rem;
-}
-
-.gap-x-8 {
-  -moz-column-gap: 2rem;
-       column-gap: 2rem;
-}
-
-.gap-y-4 {
-  row-gap: 1rem;
-}
-
 .gap-y-2 {
   row-gap: 0.5rem;
 }
@@ -1025,16 +937,8 @@ video {
   overflow: clip;
 }
 
-.overflow-x-hidden {
-  overflow-x: hidden;
-}
-
 .overflow-x-clip {
   overflow-x: clip;
-}
-
-.overflow-x-visible {
-  overflow-x: visible;
 }
 
 .text-nowrap {
@@ -1103,14 +1007,6 @@ video {
   padding-top: 2rem;
 }
 
-.pr-0 {
-  padding-right: 0px;
-}
-
-.pl-0 {
-  padding-left: 0px;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1164,20 +1060,8 @@ video {
   line-height: 1.625;
 }
 
-.leading-3 {
-  line-height: .75rem;
-}
-
-.leading-snug {
-  line-height: 1.375;
-}
-
 .leading-tight {
   line-height: 1.25;
-}
-
-.leading-none {
-  line-height: 1;
 }
 
 .tracking-\[0\.15em\] {
@@ -1244,12 +1128,6 @@ video {
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .transition-transform {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1270,26 +1148,6 @@ video {
 
 .duration-\[400ms\] {
   transition-duration: 400ms;
-}
-
-.duration-\[5000ms\] {
-  transition-duration: 5000ms;
-}
-
-.duration-300 {
-  transition-duration: 300ms;
-}
-
-.duration-1000 {
-  transition-duration: 1000ms;
-}
-
-.duration-500 {
-  transition-duration: 500ms;
-}
-
-.duration-700 {
-  transition-duration: 700ms;
 }
 
 .ease-in-out {
@@ -1382,6 +1240,10 @@ video {
 
 .hover\:decoration-red-bright:hover {
   text-decoration-color: #df3e23;
+}
+
+.group:hover .group-hover\:opacity-100 {
+  opacity: 1;
 }
 
 .peer:hover ~ .peer-hover\:-translate-y-16 {
