--- a/docs/index.css
+++ b/docs/index.css
@@ -598,6 +598,28 @@ video {
   text-decoration-color: #20d6c7;
 }
 
+.link-purple {
+  text-decoration-line: underline;
+  text-decoration-color: #bc4a9b;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 3px;
+}
+
+.link-purple:hover {
+  text-decoration-color: #e86a73;
+}
+
+.link-purple-2 {
+  text-decoration-line: underline;
+  text-decoration-color: #bc4a9b;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 3px;
+}
+
+.link-purple-2:hover {
+  text-decoration-color: #e86a73;
+}
+
 .pointer-events-none {
   pointer-events: none;
 }
@@ -666,6 +688,10 @@ video {
   margin-bottom: 1rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .ml-8 {
   margin-left: 2rem;
 }
@@ -704,6 +730,14 @@ video {
 
 .mt-\[48rem\] {
   margin-top: 48rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
 }
 
 .inline-block {
@@ -754,6 +788,10 @@ video {
   height: 100vh;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
 .min-h-full {
   min-height: 100%;
 }
@@ -796,6 +834,22 @@ video {
 
 .min-w-full {
   min-width: 100%;
+}
+
+.max-w-7xl {
+  max-width: 80rem;
+}
+
+.max-w-\[1920px\] {
+  max-width: 1920px;
+}
+
+.max-w-xl {
+  max-width: 36rem;
+}
+
+.max-w-screen-2xl {
+  max-width: 1536px;
 }
 
 .shrink-0 {
@@ -846,6 +900,16 @@ video {
 
 .translate-y-\[0\.075em\] {
   --tw-translate-y: 0.075em;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-90 {
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-45 {
+  --tw-rotate: 45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -999,12 +1063,16 @@ video {
   padding-right: 1rem;
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .pt-8 {
   padding-top: 2rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .text-center {
@@ -1044,6 +1112,11 @@ video {
   line-height: 1rem;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .font-semibold {
   font-weight: 600;
 }
@@ -1072,6 +1145,10 @@ video {
   letter-spacing: 0.025em;
 }
 
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
+
 .text-off-white {
   --tw-text-opacity: 1;
   color: rgb(218 224 234 / var(--tw-text-opacity));
@@ -1088,6 +1165,10 @@ video {
 
 .decoration-blue-light {
   text-decoration-color: #249fde;
+}
+
+.decoration-purple-light {
+  text-decoration-color: #bc4a9b;
 }
 
 .decoration-red-light {
@@ -1130,6 +1211,26 @@ video {
 
 .transition-transform {
   transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-\[margin-right\] {
+  transition-property: margin-right;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1236,6 +1337,10 @@ video {
 
 .hover\:decoration-blue-bright:hover {
   text-decoration-color: #20d6c7;
+}
+
+.hover\:decoration-purple-bright:hover {
+  text-decoration-color: #e86a73;
 }
 
 .hover\:decoration-red-bright:hover {
