--- a/docs/index.css
+++ b/docs/index.css
@@ -556,24 +556,24 @@ video {
 
 .link-red {
   text-decoration-line: underline;
-  text-decoration-color: #b4202a;
+  text-decoration-color: #df3e23;
   text-decoration-thickness: 1px;
   text-underline-offset: 3px;
 }
 
 .link-red:hover {
-  text-decoration-color: #df3e23;
+  text-decoration-color: #fa6a0a;
 }
 
 .link-red-2 {
   text-decoration-line: underline;
-  text-decoration-color: #b4202a;
+  text-decoration-color: #df3e23;
   text-decoration-thickness: 2px;
   text-underline-offset: 3px;
 }
 
 .link-red-2:hover {
-  text-decoration-color: #df3e23;
+  text-decoration-color: #fa6a0a;
 }
 
 .link-blue {
@@ -704,6 +704,10 @@ video {
   margin-right: 1rem;
 }
 
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
 .mr-8 {
   margin-right: 2rem;
 }
@@ -732,14 +736,6 @@ video {
   margin-top: 48rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mr-6 {
-  margin-right: 1.5rem;
-}
-
 .inline-block {
   display: inline-block;
 }
@@ -764,6 +760,10 @@ video {
   height: 1rem;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
 .h-\[85vh\] {
   height: 85vh;
 }
@@ -786,10 +786,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-8 {
-  height: 2rem;
 }
 
 .min-h-full {
@@ -836,20 +832,8 @@ video {
   min-width: 100%;
 }
 
-.max-w-7xl {
-  max-width: 80rem;
-}
-
 .max-w-\[1920px\] {
   max-width: 1920px;
-}
-
-.max-w-xl {
-  max-width: 36rem;
-}
-
-.max-w-screen-2xl {
-  max-width: 1536px;
 }
 
 .shrink-0 {
@@ -905,11 +889,6 @@ video {
 
 .rotate-90 {
   --tw-rotate: 90deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-45 {
-  --tw-rotate: 45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -993,8 +972,8 @@ video {
   gap: 2rem;
 }
 
-.gap-y-2 {
-  row-gap: 0.5rem;
+.gap-y-6 {
+  row-gap: 1.5rem;
 }
 
 .overflow-clip {
@@ -1039,7 +1018,7 @@ video {
 
 .bg-red-main {
   --tw-bg-opacity: 1;
-  background-color: rgb(115 23 45 / var(--tw-bg-opacity));
+  background-color: rgb(180 32 42 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -1063,6 +1042,10 @@ video {
   padding-right: 1rem;
 }
 
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
 .pt-4 {
   padding-top: 1rem;
 }
@@ -1071,16 +1054,16 @@ video {
   padding-top: 2rem;
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
 .text-center {
   text-align: center;
 }
 
 .text-right {
   text-align: right;
+}
+
+.indent-6 {
+  text-indent: 1.5rem;
 }
 
 .align-text-bottom {
@@ -1110,11 +1093,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .font-semibold {
@@ -1172,7 +1150,7 @@ video {
 }
 
 .decoration-red-light {
-  text-decoration-color: #b4202a;
+  text-decoration-color: #df3e23;
 }
 
 .decoration-1 {
@@ -1209,28 +1187,14 @@ video {
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-.transition-transform {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .transition-\[margin-right\] {
   transition-property: margin-right;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-transform {
+  transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1325,6 +1289,11 @@ video {
   mask: var(--soft-mask-vertical), var(--soft-mask-horizontal);
 }
 
+.list-hanging {
+  margin-left: 1.5rem;
+  text-indent: 1.5rem hanging;
+}
+
 .hover\:-translate-x-2:hover {
   --tw-translate-x: -0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1344,7 +1313,7 @@ video {
 }
 
 .hover\:decoration-red-bright:hover {
-  text-decoration-color: #df3e23;
+  text-decoration-color: #fa6a0a;
 }
 
 .group:hover .group-hover\:opacity-100 {
