--- a/docs/src/index.css
+++ b/docs/src/index.css
@@ -75,6 +75,10 @@
     text-indent: 1.5rem hanging;
 }
 
+.text-hanging {
+    text-indent: 1.5rem hanging;
+}
+
 @layer components {
     .link-red {
         @apply underline underline-offset-[3px] decoration-1 decoration-red-light hover:decoration-red-bright
