--- a/docs/index.css
+++ b/docs/index.css
@@ -620,6 +620,30 @@ video {
   text-decoration-color: #e86a73;
 }
 
+.text-content {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+@media (min-width: 1536px) {
+  .text-content {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+.text-sidebar {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+@media (min-width: 1536px) {
+  .text-sidebar {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
 .pointer-events-none {
   pointer-events: none;
 }
@@ -676,8 +700,12 @@ video {
   z-index: 50;
 }
 
-.-mt-16 {
-  margin-top: -4rem;
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
+.-mt-8 {
+  margin-top: -2rem;
 }
 
 .mb-4 {
@@ -728,10 +756,6 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .mt-48 {
   margin-top: 12rem;
 }
@@ -748,20 +772,12 @@ video {
   margin-top: 48rem;
 }
 
-.-mt-8 {
-  margin-top: -2rem;
-}
-
 .inline-block {
   display: inline-block;
 }
 
 .flex {
   display: flex;
-}
-
-.grid {
-  display: grid;
 }
 
 .hidden {
@@ -816,10 +832,6 @@ video {
   min-height: 100%;
 }
 
-.w-0 {
-  width: 0px;
-}
-
 .w-0\.5 {
   width: 0.125rem;
 }
@@ -834,10 +846,6 @@ video {
 
 .w-5\/6 {
   width: 83.333333%;
-}
-
-.w-8 {
-  width: 2rem;
 }
 
 .w-\[24px\] {
@@ -856,12 +864,13 @@ video {
   width: 100vw;
 }
 
-.min-w-\[1248px\] {
-  min-width: 1248px;
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
 }
 
-.min-w-full {
-  min-width: 100%;
+.min-w-\[1248px\] {
+  min-width: 1248px;
 }
 
 .max-w-\[1920px\] {
@@ -872,12 +881,21 @@ video {
   max-width: 512px;
 }
 
+.max-w-fit {
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+}
+
 .shrink-0 {
   flex-shrink: 0;
 }
 
 .flex-grow {
   flex-grow: 1;
+}
+
+.flex-grow-0 {
+  flex-grow: 0;
 }
 
 .origin-bottom {
@@ -964,12 +982,8 @@ video {
           user-select: none;
 }
 
-.grid-flow-col {
-  grid-auto-flow: column;
-}
-
-.grid-rows-2 {
-  grid-template-rows: repeat(2, minmax(0, 1fr));
+.resize {
+  resize: both;
 }
 
 .flex-col {
@@ -1006,14 +1020,6 @@ video {
 
 .gap-4 {
   gap: 1rem;
-}
-
-.gap-8 {
-  gap: 2rem;
-}
-
-.gap-y-6 {
-  row-gap: 1.5rem;
 }
 
 .overflow-clip {
@@ -1065,6 +1071,11 @@ video {
   background-color: rgb(180 32 42 / var(--tw-bg-opacity));
 }
 
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1114,6 +1125,11 @@ video {
   vertical-align: text-bottom;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-2xs {
   font-size: 0.625rem;
 }
@@ -1128,9 +1144,9 @@ video {
   line-height: 1;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-lg {
@@ -1163,10 +1179,6 @@ video {
 
 .leading-normal {
   line-height: 1.5;
-}
-
-.leading-relaxed {
-  line-height: 1.625;
 }
 
 .leading-tight {
@@ -1431,8 +1443,25 @@ video {
 }
 
 @media (min-width: 480px) {
+  .xs\:mr-8 {
+    margin-right: 2rem;
+  }
+
   .xs\:flex {
     display: flex;
+  }
+
+  .xs\:h-8 {
+    height: 2rem;
+  }
+
+  .xs\:p-4 {
+    padding: 1rem;
+  }
+
+  .xs\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
@@ -1491,6 +1520,10 @@ video {
     display: block;
   }
 
+  .md\:h-8 {
+    height: 2rem;
+  }
+
   .md\:max-w-\[50vw\] {
     max-width: 50vw;
   }
@@ -1508,5 +1541,25 @@ video {
 @media (min-width: 1536px) {
   .\32xl\:w-full {
     width: 100%;
+  }
+
+  .\32xl\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .\32xl\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .\32xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .\32xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
