--- a/docs/index.css
+++ b/docs/index.css
@@ -684,6 +684,10 @@ video {
   top: 500px;
 }
 
+.-z-10 {
+  z-index: -10;
+}
+
 .-z-20 {
   z-index: -20;
 }
@@ -816,6 +820,10 @@ video {
   height: 990px;
 }
 
+.h-\[calc\(100\%\+1px\)\] {
+  height: calc(100% + 1px);
+}
+
 .h-\[calc\(100\%\+1rem\+2rem\)\] {
   height: calc(100% + 1rem + 2rem);
 }
@@ -876,8 +884,8 @@ video {
   min-width: 1248px;
 }
 
-.min-w-\[60\%\] {
-  min-width: 60%;
+.min-w-\[65\%\] {
+  min-width: 65%;
 }
 
 .max-w-\[1920px\] {
@@ -917,6 +925,10 @@ video {
   transform-origin: bottom;
 }
 
+.origin-right {
+  transform-origin: right;
+}
+
 .origin-top {
   transform-origin: top;
 }
@@ -928,6 +940,11 @@ video {
 
 .-translate-x-64 {
   --tw-translate-x: -16rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-full {
+  --tw-translate-x: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -963,6 +980,11 @@ video {
 
 .rotate-90 {
   --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-x-150 {
+  --tw-scale-x: 1.5;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1086,9 +1108,19 @@ video {
   background-color: rgb(121 58 128 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-red-main {
   --tw-bg-opacity: 1;
   background-color: rgb(180 32 42 / var(--tw-bg-opacity));
+}
+
+.bg-black-main {
+  --tw-bg-opacity: 1;
+  background-color: rgb(6 6 8 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -1259,6 +1291,11 @@ video {
   opacity: 0;
 }
 
+.blur {
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .backdrop-blur-\[2px\] {
   --tw-backdrop-blur: blur(2px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -1353,9 +1390,18 @@ video {
 
 .fade-bottom {
   --mask: linear-gradient(to bottom, 
-        rgba(0,0,0, 1) 0,   rgba(0,0,0, 1) 40%, 
-        rgba(0,0,0, 0) 90%, rgba(0,0,0, 0) 0
+        rgba(0,0,0, 1) 0,   rgba(0,0,0, 1) 90%, 
+        rgba(0,0,0, 0) 100%, rgba(0,0,0, 0) 0
     ) 100% 50% / 100% 100% repeat-x;
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+}
+
+.fade-left {
+  --mask: linear-gradient(to left, 
+        rgba(0,0,0, 1) 0,   rgba(0,0,0, 1) 70%,
+        rgba(0,0,0, 0) 100%, rgba(0,0,0, 0) 0
+    ) 100% 50% / 100% 100% repeat-y;
   -webkit-mask: var(--mask);
   mask: var(--mask);
 }
