--- a/docs/index.css
+++ b/docs/index.css
@@ -667,21 +667,21 @@ video {
 }
 
 .text-content {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 @media (min-width: 640px) {
   .text-content {
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
 @media (min-width: 1536px) {
   .text-content {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
@@ -753,6 +753,24 @@ video {
   }
 }
 
+.text-content-sm {
+  font-size: 0.625rem;
+}
+
+@media (min-width: 640px) {
+  .text-content-sm {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  .text-content-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
 .pointer-events-none {
   pointer-events: none;
 }
@@ -819,6 +837,10 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.z-\[100\] {
+  z-index: 100;
 }
 
 .col-span-4 {
@@ -921,6 +943,10 @@ video {
   height: 1rem;
 }
 
+.h-64 {
+  height: 16rem;
+}
+
 .h-\[85vh\] {
   height: 85vh;
 }
@@ -947,6 +973,18 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-0\.5 {
+  height: 0.125rem;
+}
+
+.h-\[1px\] {
+  height: 1px;
 }
 
 .min-h-\[270px\] {
@@ -989,12 +1027,32 @@ video {
   width: 85%;
 }
 
+.w-\[min\(30rem\2c 100\%\)\] {
+  width: min(30rem,100%);
+}
+
+.w-\[min\(35rem\2c 100\%\)\] {
+  width: min(35rem,100%);
+}
+
+.w-\[min\(80rem\2c 90\%\)\] {
+  width: min(80rem,90%);
+}
+
 .w-full {
   width: 100%;
 }
 
 .w-screen {
   width: 100vw;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .min-w-\[1248px\] {
@@ -1266,8 +1324,25 @@ video {
   text-indent: 1.5rem;
 }
 
+.align-baseline {
+  vertical-align: baseline;
+}
+
+.align-middle {
+  vertical-align: middle;
+}
+
+.align-text-top {
+  vertical-align: text-top;
+}
+
 .align-text-bottom {
   vertical-align: text-bottom;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-2xs {
@@ -1336,6 +1411,10 @@ video {
   letter-spacing: 0.05em;
 }
 
+.tracking-widest {
+  letter-spacing: 0.1em;
+}
+
 .text-neutral-400 {
   --tw-text-opacity: 1;
   color: rgb(163 163 163 / var(--tw-text-opacity));
@@ -1394,6 +1473,17 @@ video {
 
 .opacity-80 {
   opacity: 0.8;
+}
+
+.ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.ring-red-main {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(180 32 42 / var(--tw-ring-opacity));
 }
 
 .backdrop-blur-\[2px\] {
@@ -1598,10 +1688,6 @@ video {
   opacity: 1;
 }
 
-.peer:hover ~ .peer-hover\:opacity-75 {
-  opacity: 0.75;
-}
-
 @media (min-width: 480px) {
   .xs\:flex {
     display: flex;
@@ -1690,6 +1776,10 @@ video {
     margin-right: 2rem;
   }
 
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
   .md\:block {
     display: block;
   }
@@ -1703,8 +1793,21 @@ video {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
   .md\:gap-3 {
     gap: 0.75rem;
+  }
+
+  .md\:gap-8 {
+    gap: 2rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .md\:text-xl {
@@ -1738,9 +1841,14 @@ video {
     line-height: 1;
   }
 
-  .\32xl\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+  .\32xl\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .\32xl\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 
   .\32xl\:text-xl {
